Excessive CPU use (#416)