@@ -6,14 +6,12 @@ import com.intellij.openapi.editor.markup.*;
 import com.intellij.openapi.project.*;
 import com.intellij.psi.*;
 import com.intellij.psi.search.*;
-import com.intellij.psi.search.searches.*;
 import com.intellij.psi.util.*;
 import com.reason.ide.*;
 import com.reason.ide.search.index.*;
-import com.reason.lang.*;
+import com.reason.ide.search.reference.*;
 import com.reason.lang.core.psi.*;
 import com.reason.lang.core.psi.impl.*;
-import com.reason.lang.core.type.*;
 import com.reason.lang.ocaml.*;
 import org.jetbrains.annotations.*;
 
@@ -28,203 +26,278 @@ public class ORLineMarkerProvider extends RelatedItemLineMarkerProvider {
         Project project = element.getProject();
         GlobalSearchScope scope = GlobalSearchScope.allScope(project);
 
-        RelatedItemLineMarkerInfo<PsiElement> marker = null;
-
-        // LET
-        if (element instanceof RPsiLet) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<? extends RPsiQualifiedPathElement> targets = null;
-            boolean isOcaml = element.getLanguage() == OclLanguage.INSTANCE;
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiVar.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiVar.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<? extends RPsiVar> resolvedElements;
-                if (isOcaml && !inInterface) {
-                    resolvedElements = qName == null ? null : ValFqnIndex.getElements(qName, project, scope);
-                } else {
-                    resolvedElements = qName == null ? null : LetFqnIndex.getElements(qName, project, scope);
-                }
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
-            }
-
-            marker = createMarkerInfo((RPsiLet) element, inInterface, "let/val", targets);
+        if (element instanceof RPsiLet letElement) {
+            collectLetNavigationMarkers(letElement, project, scope, result);
+        } else if (element instanceof RPsiVal valElement) {
+            collectValNavigationMarkers(valElement, project, scope, result);
+        } else if (element instanceof RPsiType typeElement) {
+            collectTypeNavigationMarkers(typeElement, project, scope, result);
+        } else if (element instanceof RPsiExternal externalElement) {
+            collectExternalNavigationMarkers(externalElement, project, scope, result);
+        } else if (element instanceof RPsiClass classElement) {
+            collectClassNavigationMarkers(classElement, project, scope, result);
+        } else if (element instanceof RPsiClassMethodImpl methodElement) {
+            collectClassMethodNavigationMarkers(methodElement, project, scope, result);
+        } else if (element instanceof RPsiException exceptionElement) {
+            collectExceptionNavigationMarkers(exceptionElement, project, scope, result);
+        } else if (element instanceof RPsiInnerModule innerModule) {
+            collectInnerModuleNavigationMarkers(innerModule, project, scope, result);
         }
-        // VAL
-        else if (element instanceof RPsiVal) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<? extends RPsiQualifiedPathElement> targets = null;
+    }
 
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiVar.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiVar.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<? extends RPsiVar> resolvedElements = qName == null ? null : LetFqnIndex.getElements(qName, project, scope);
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
+    private void collectLetNavigationMarkers(@NotNull RPsiLet element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        List<? extends RPsiVar> targets = null;
+        boolean isOcaml = element.getLanguage() == OclLanguage.INSTANCE;
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType() || inInterface;
+            String letName = element.getName();
+            if (letName != null) {
+                targets = inInterface
+                        ? findTargetFromInterfaceModule(innerModule, letName, RPsiVar.class, scope)
+                        : findTargetFromImplementationModule(innerModule, letName, RPsiVar.class);
             }
-
-            marker = createMarkerInfo((PsiNameIdentifierOwner) element, inInterface, "let/val", targets);
-        }
-        // TYPE
-        else if (element instanceof RPsiType) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<RPsiType> targetTypes = emptyList();
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targetTypes = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiType.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiType.class);
-                }
+        } else if (module != null) {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<? extends RPsiVar> resolvedElements;
+            if (isOcaml && !module.isInterfaceFile()) {
+                resolvedElements = qName == null ? null : ValFqnIndex.getElements(qName, project, scope);
             } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<RPsiType> resolvedElements = qName == null ? null : TypeFqnIndex.getElements(qName, project, scope);
-                targetTypes = resolveTargetFromIndex(inInterface, resolvedElements);
+                resolvedElements = qName == null ? null : LetFqnIndex.getElements(qName, project, scope);
             }
-
-            marker = createMarkerInfo((RPsiType) element, inInterface, "type", targetTypes);
-        }
-        // EXTERNAL
-        else if (element instanceof RPsiExternal) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<RPsiExternal> targets = null;
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiExternal.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiExternal.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<RPsiExternal> resolvedElements = qName == null ? null : ExternalFqnIndex.getElements(qName, project, scope);
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
-            }
-
-            marker = createMarkerInfo((RPsiExternal) element, inInterface, "external", targets);
-        }
-        // CLASS
-        else if (element instanceof RPsiClass) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<RPsiClass> targets = null;
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiClass.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiClass.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<RPsiClass> resolvedElements = qName == null ? null : ClassFqnIndex.getElements(qName, project, scope);
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
-            }
-
-            marker = createMarkerInfo((RPsiClass) element, inInterface, "class", targets);
-        }
-        // CLASS METHOD
-        else if (element instanceof RPsiClassMethodImpl) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<RPsiClassMethod> targets = null;
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiClassMethod.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiClassMethod.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<RPsiClassMethod> resolvedElements = qName == null ? null : ClassMethodFqnIndex.getElements(qName, project, scope);
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
-            }
-
-            marker = createMarkerInfo((RPsiClassMethod) element, inInterface, "method", targets);
-        }
-        // EXCEPTION
-        else if (element instanceof RPsiException) {
-            RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
-            boolean inInterface = module != null && module.isInterface();
-            List<RPsiException> targets = null;
-
-            if (module instanceof RPsiInnerModule) {
-                String elementName = ((RPsiQualifiedPathElement) element).getName();
-                if (elementName != null) {
-                    targets = inInterface ? findTargetFromInterfaceModule((RPsiInnerModule) module, elementName, RPsiException.class)
-                            : findTargetFromImplementationModule((RPsiInnerModule) module, elementName, RPsiException.class);
-                }
-            } else {
-                // Top module navigation
-                String qName = ((RPsiQualifiedPathElement) element).getQualifiedName();
-                Collection<RPsiException> resolvedElements = qName == null ? null : ExceptionFqnIndex.getElements(qName, project, scope);
-                targets = resolveTargetFromIndex(inInterface, resolvedElements);
-            }
-
-            marker = createMarkerInfo((RPsiException) element, inInterface, "exception", targets);
-        }
-        // MODULE
-        else if (element instanceof RPsiInnerModule module) {
-            List<RPsiInnerModule> targets = null;
-
-            if (module.isInterface()) {
-                // Find module(s) from interface
-                targets = ReferencesSearch.search(module).findAll().stream()
-                        .map(searchReference -> {
-                            PsiElement referenceElement = searchReference.getElement().getParent();
-                            PsiElement targetElement = (referenceElement instanceof RPsiModuleType) ? referenceElement.getParent() : null;
-                            return (targetElement instanceof RPsiInnerModule) ? (RPsiInnerModule) targetElement : null;
-                        })
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
-            } else {
-                // Find interface from module
-                RPsiModuleType moduleType = module.getModuleType();
-                PsiElement lastChild = moduleType == null ? null : PsiTreeUtil.lastChild(moduleType);
-                if (lastChild instanceof RPsiUpperSymbol) {
-                    PsiElement resolvedElement = ((RPsiUpperSymbol) lastChild).getReference().resolveInterface();
-                    if (resolvedElement instanceof RPsiInnerModule) {
-                        targets = singletonList((RPsiInnerModule) resolvedElement);
-                    }
-                }
-            }
-
-            marker = createMarkerInfo(module, module.isInterface(), "module", targets);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
         }
 
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "let/val", targets);
         if (marker != null) {
             result.add(marker);
         }
     }
 
-    private static @NotNull <T extends RPsiQualifiedPathElement> List<T> resolveTargetFromIndex(boolean inInterface, @Nullable Collection<T> resolvedElements) {
+    private void collectValNavigationMarkers(@NotNull RPsiVal element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        List<? extends RPsiVar> targets = null;
+
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType() || inInterface;
+            String valName = element.getName();
+            if (valName != null) {
+                targets = inInterface
+                        ? findTargetFromInterfaceModule(innerModule, valName, RPsiVar.class, scope)
+                        : findTargetFromImplementationModule(innerModule, valName, RPsiVar.class);
+            }
+        } else if (module != null) {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<? extends RPsiVar> resolvedElements = qName == null ? null : LetFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "let/val", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectTypeNavigationMarkers(@NotNull RPsiType element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        List<RPsiType> targets = null;
+
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType() || inInterface;
+            String typeName = element.getName();
+            if (typeName != null) {
+                targets = inInterface ? findTargetFromInterfaceModule(innerModule, typeName, RPsiType.class, scope)
+                        : findTargetFromImplementationModule(innerModule, typeName, RPsiType.class);
+            }
+        } else if (module != null) {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<RPsiType> resolvedElements = qName == null ? null : TypeFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "type", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectExternalNavigationMarkers(@NotNull RPsiExternal element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+        List<RPsiExternal> targets = null;
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType() || inInterface;
+            String elementName = element.getName();
+            if (elementName != null) {
+                targets = inInterface ? findTargetFromInterfaceModule(innerModule, elementName, RPsiExternal.class, scope)
+                        : findTargetFromImplementationModule(innerModule, elementName, RPsiExternal.class);
+            }
+        } else {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<RPsiExternal> resolvedElements = qName == null ? null : ExternalFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "external", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectClassNavigationMarkers(@NotNull RPsiClass element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+        List<RPsiClass> targets = null;
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType() || inInterface;
+            String elementName = element.getName();
+            if (elementName != null) {
+                targets = innerModule.isModuleType() ? findTargetFromInterfaceModule(innerModule, elementName, RPsiClass.class, scope)
+                        : findTargetFromImplementationModule(innerModule, elementName, RPsiClass.class);
+            }
+        } else {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<RPsiClass> resolvedElements = qName == null ? null : ClassFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "class", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectClassMethodNavigationMarkers(@NotNull RPsiClassMethod element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<PsiElement>> result) {
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+        List<RPsiClassMethod> targets = null;
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            String elementName = element.getName();
+            if (elementName != null) {
+                targets = inInterface ? findTargetFromInterfaceModule(innerModule, elementName, RPsiClassMethod.class, scope)
+                        : findTargetFromImplementationModule(innerModule, elementName, RPsiClassMethod.class);
+            }
+        } else {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<RPsiClassMethod> resolvedElements = qName == null ? null : ClassMethodFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "method", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectExceptionNavigationMarkers(@NotNull RPsiException element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<?>> result) {
+        RPsiModule module = PsiTreeUtil.getStubOrPsiParentOfType(element, RPsiModule.class);
+        boolean inInterface = module != null && module.isInterfaceFile();
+        List<RPsiException> targets = null;
+
+        if (module instanceof RPsiInnerModule innerModule) {
+            inInterface = innerModule.isModuleType();
+            String elementName = element.getName();
+            if (elementName != null) {
+                targets = inInterface ? findTargetFromInterfaceModule(innerModule, elementName, RPsiException.class, scope)
+                        : findTargetFromImplementationModule(innerModule, elementName, RPsiException.class);
+            }
+        } else {
+            // Top module navigation
+            String qName = element.getQualifiedName();
+            Collection<RPsiException> resolvedElements = qName == null ? null : ExceptionFqnIndex.getElements(qName, project, scope);
+            targets = resolveTargetFromIndex(inInterface, resolvedElements);
+        }
+
+        RelatedItemLineMarkerInfo<PsiElement> marker = createMarkerInfo(element, inInterface, "exception", targets);
+        if (marker != null) {
+            result.add(marker);
+        }
+    }
+
+    private void collectInnerModuleNavigationMarkers(@NotNull RPsiInnerModule element, @NotNull Project project, @NotNull GlobalSearchScope scope, @NotNull Collection<? super RelatedItemLineMarkerInfo<?>> result) {
+        List<RPsiInnerModule> implementsModules = new ArrayList<>();
+        List<RPsiInnerModule> declareModules = new ArrayList<>();
+
+        String qName = element.getQualifiedName();
+
+        // A module type define a signature
+        if (element.isModuleType()) {
+            String signatureName = element.getModuleName();
+            if (signatureName != null) {
+                // Find module(s) that use the interface as a result
+                List<RPsiInnerModule> signatureModules = ModuleSignatureIndex.getElements(signatureName, project, scope)
+                        .stream().map(m -> {
+                            RPsiModuleSignature moduleSignature = m.getModuleSignature();
+                            ORModuleResolutionPsiGist.Data data = moduleSignature != null ? ORModuleResolutionPsiGist.getData(m.getContainingFile()) : null;
+                            Collection<String> values = data != null ? data.getValues(moduleSignature) : emptyList();
+                            return values.contains(qName) ? m : null;
+                        })
+                        .filter(Objects::nonNull)
+                        .toList();
+
+                implementsModules.addAll(signatureModules);
+            }
+        } else {
+            RPsiModuleSignature moduleSignature = element.getModuleSignature();
+            RPsiUpperSymbol signatureIdentifier = moduleSignature != null ? moduleSignature.getNameIdentifier() : null;
+
+            // Module is implementing a named signature (module type), we need to find its definition
+            if (signatureIdentifier != null) {
+                PsiElement resolvedElement = signatureIdentifier.getReference().resolveInterface();
+                if (resolvedElement instanceof RPsiInnerModule) {
+                    declareModules.add((RPsiInnerModule) resolvedElement);
+                }
+            }
+        }
+
+        // Find module(s) in the related file
+        Collection<RPsiModule> modules = qName != null ? ModuleFqnIndex.getElements(qName, project, scope) : null;
+        if (modules != null) {
+            boolean fromInterfaceFile = element.isInterfaceFile();
+            List<RPsiInnerModule> relatedModules = modules.stream()
+                    .filter(m -> m.isInterfaceFile() != fromInterfaceFile)
+                    .map(m -> m instanceof RPsiInnerModule ? (RPsiInnerModule) m : null)
+                    .filter(Objects::nonNull)
+                    .toList();
+
+            if (fromInterfaceFile) {
+                implementsModules.addAll(relatedModules);
+            } else {
+                declareModules.addAll(relatedModules);
+            }
+        }
+
+        if (!implementsModules.isEmpty()) {
+            result.add(createMarkerInfo(element, true, "module", implementsModules));
+        }
+        if (!declareModules.isEmpty()) {
+            result.add(createMarkerInfo(element, false, "module", declareModules));
+        }
+    }
+
+    private static @NotNull <T extends RPsiQualifiedPathElement> List<T> resolveTargetFromIndex(boolean inInterfaceFile, @Nullable Collection<T> resolvedElements) {
         if (resolvedElements != null) {
             for (T resolvedElement : resolvedElements) {
                 RPsiModule targetModule = PsiTreeUtil.getStubOrPsiParentOfType(resolvedElement, RPsiModule.class);
-                boolean targetInterface = targetModule != null && targetModule.isInterface();
-                if (inInterface && !targetInterface) {
+                boolean targetInterface = targetModule != null && targetModule.isInterfaceFile();
+                if (inInterfaceFile && !targetInterface) {
                     return singletonList(resolvedElement);
-                } else if (!inInterface && targetInterface) {
+                } else if (!inInterfaceFile && targetInterface) {
                     return singletonList(resolvedElement);
                 }
             }
@@ -233,12 +306,12 @@ public class ORLineMarkerProvider extends RelatedItemLineMarkerProvider {
     }
 
     private @NotNull <T extends RPsiQualifiedPathElement> List<T> findTargetFromImplementationModule(@NotNull RPsiInnerModule sourceModule, @NotNull String elementName, @NotNull Class<T> expectedClass) {
-        RPsiModuleType sourceModuleType = sourceModule.getModuleType();
-        PsiElement lastChild = sourceModuleType == null ? null : PsiTreeUtil.lastChild(sourceModuleType);
-        if (lastChild instanceof RPsiUpperSymbol) {
-            PsiElement resolvedElement = ((RPsiUpperSymbol) lastChild).getReference().resolveInterface();
-            if (resolvedElement instanceof RPsiInnerModule) {
-                for (T rPsiType : PsiTreeUtil.getChildrenOfTypeAsList(((RPsiInnerModule) resolvedElement).getBody(), expectedClass)) {
+        RPsiModuleSignature sourceModuleSignature = sourceModule.getModuleSignature();
+        RPsiUpperSymbol sourceSignatureIdentifier = sourceModuleSignature != null ? sourceModuleSignature.getNameIdentifier() : null;
+        if (sourceSignatureIdentifier != null) {
+            PsiElement resolvedElement = sourceSignatureIdentifier.getReference().resolveInterface();
+            if (resolvedElement instanceof RPsiInnerModule resolvedModule) {
+                for (T rPsiType : PsiTreeUtil.getChildrenOfTypeAsList(resolvedModule.getBody(), expectedClass)) {
                     if (elementName.equals(rPsiType.getName())) {
                         return singletonList(rPsiType);
                     }
@@ -248,17 +321,23 @@ public class ORLineMarkerProvider extends RelatedItemLineMarkerProvider {
         return emptyList();
     }
 
-    private @NotNull <T extends RPsiQualifiedPathElement> List<T> findTargetFromInterfaceModule(@NotNull RPsiInnerModule sourceModule, @NotNull String elementName, @NotNull Class<T> expectedClass) {
-        List<RPsiInnerModule> targetModules = ReferencesSearch.search(sourceModule).findAll().stream()
-                .map(searchReference -> {
-                    PsiElement referenceElement = searchReference.getElement().getParent();
-                    PsiElement targetElement = (referenceElement instanceof RPsiModuleType) ? referenceElement.getParent() : null;
-                    return (targetElement instanceof RPsiInnerModule) ? (RPsiInnerModule) targetElement : null;
+    private @NotNull <T extends RPsiQualifiedPathElement> List<T> findTargetFromInterfaceModule(@NotNull RPsiInnerModule sourceModule, @NotNull String elementName, @NotNull Class<T> expectedClass, @Nullable GlobalSearchScope scope) {
+        // Find all modules that return that type name
+        String interfaceQName = sourceModule.getQualifiedName();
+        String interfaceName = sourceModule.getModuleName();
+        List<RPsiInnerModule> refModules = interfaceName != null ? ModuleSignatureIndex.getElements(interfaceName, sourceModule.getProject(), scope).stream().toList() : emptyList();
+
+        List<RPsiInnerModule> targetModules = refModules.stream().map(module -> {
+                    RPsiModuleSignature moduleType = module.getModuleSignature();
+                    ORModuleResolutionPsiGist.Data data = moduleType != null ? ORModuleResolutionPsiGist.getData(module.getContainingFile()) : null;
+                    Collection<String> values = data != null ? data.getValues(moduleType) : Collections.emptyList();
+                    return values.contains(interfaceQName) ? module : null;
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (!targetModules.isEmpty()) {
+            // Iterate over potential modules to find the correct ones
             return targetModules.stream().map(module -> {
                         for (T targetElement : PsiTreeUtil.getChildrenOfTypeAsList(module.getBody(), expectedClass)) {
                             if (elementName.equals(targetElement.getName())) {
